# EngDados

./: .gitignore
Aula06/: README.md
Git/: AulaGit.md
GitHub/: Aula GitHub  Aula GitHub.md  Clonar_Criar_GH.md  GitHubCLI.md
Instalando/: Anotacoes.md  Anotacoes_Bibliotecas.md  Anotacoes_Instalacao.md
Python EngDados/: README.md
Python EngDados/Aula02/: README.md  desafio_gpt.py  desafio_mod_gpt.py  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  exercicios.py  utils.py
Python EngDados/Aula05/umbi/: README.md  pyproject.toml
Python EngDados/Aula05/umbi/src/: using_dask.py  using_pandas.py  using_python.py  using_python_old.py
Python EngDados/BoasPraticas/: README.md
Python EngDados/ImportRel/: README.md  setup.py
Python EngDados/ImportRel/app/: main.py
Python EngDados/ImportRel/app/utils/: __init.py__  validators.py
WSPython/: README.md
