[project]
name = "umbi"
version = "0.1.0"
description = "Copia do projeto umbi"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dask (>=2025.5.1,<2026.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
